--- a/index.html
+++ b/index.html
@@ -299,15 +299,16 @@
                         <h3 class="sidebar-title">Executive Board</h3><p class="sidebar-subtitle">Meet our leadership team</p>
                         <ul class="team-list">
                             <li><div class="team-img-placeholder"></div><div class="team-info"><h4>Joyal</h4><span>President</span><a href="mailto:joyal.nexus@msrit.edu">joyal.nexus@msrit.edu</a></div></li>
-                            <li><div class="team-img-placeholder"></div><div class="team-info"><h4>Kshiraj</h4><span>Vice President</span><a href="mailto:kshiraj.johnson@msrit.edu">kshiraj.johnson@msrit.edu</a></div></li>
-                            <li><div class="team-img-placeholder"></div><div class="team-info"><h4>Nikitha</h4><span>Treasurer</span><a href="mailto:nikitha@msrit.edu">nikitha@msrit.edu</a></div></li>
+                            <li><div class="team-img-placeholder"></div><div class="team-info"><h4>Abhishek</h4><span>Vice President</span><a href="mailto:kshiraj.johnson@msrit.edu">Abhishek.johnson@msrit.edu</a></div></li>
+                            <li><div class="team-img-placeholder"></div><div class="team-info"><h4>Rishi</h4><span>Treasurer</span><a href="mailto:nikitha@msrit.edu">Rishi@msrit.edu</a></div></li>
                         </ul>
                     </div>
                     <div class="sidebar-card">
                         <h3 class="sidebar-title">Faculty Advisors</h3><p class="sidebar-subtitle">Our mentors and guides</p>
                         <ul class="team-list">
-                            <li><div class="team-img-placeholder"></div><div class="team-info"><h4>Supreetha</h4><span>Finance Enthusiast</span><a href="mailto:supreetha@msrit.edu">supreetha@msrit.edu</a></div></li>
-                            <li><div class="team-img-placeholder"></div><div class="team-info"><h4>Aditi</h4><span>Economics Enthusiast</span><a href="mailto:sleeping@msrit.edu">aditi@msrit.edu</a></div></li>
+                            <li><div class="team-img-placeholder"></div><div class="team-info"><h4>Gaurav</h4><span>Secretory</span><a href="mailto:supreetha@msrit.edu">Gaurav@msrit.edu</a></div></li>
+                            <li><div class="team-img-placeholder"></div><div class="team-info"><h4>Abhinav</h4><span>Coordinator</span><a href="mailto:sleeping@msrit.edu">Abhinav@msrit.edu</a></div></li>
+                            <li><div class="team-img-placeholder"></div><div class="team-info"><h4>Sourish</h4><span>Auditor</span><a href="mailto:sleeping@msrit.edu">Sourish@msrit.edu</a></div></li>
                         </ul>
                     </div>
                 </aside>
