--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <div class="container">
                 <div class="hero-content">
                     <h1>Your Nexus to Financial <span>Excellence</span></h1>
-                    <p>To empower students with practical financial knowledge, critical economic understanding, and hands-on market experience through focused, collaborative learning across four specialized domains, Personal Finance, Economic Literacy, Land Revenue & Corporate Finance, and Cryptocurrency & Trading.</p>
+                    <p>Nexus Finance Club, established in 2025, is a vertical under the E-Cell with a mission to bridge the gap between classroom learning and real-world financial expertise. What began as a small group of finance enthusiasts has grown into one of the largest and most active student organizations on campus, with over 20 active members from diverse academic backgrounds.</p>
                     <div class="hero-actions">
                         <a href="#contact" class="btn btn-primary">Join Nexus</a>
                         <a href="#events" class="btn btn-secondary">Explore Club Activities <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" style="width: 1.2em; height: 1.2em; margin-left: 0.5em;"><path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" /></svg></a>
@@ -241,7 +241,7 @@
             <div class="container about-container">
                 <div class="about-main">
                     <h2 class="section-title about-title">About Nexus Finance Club</h2>
-                    <p class="about-subtitle">Empowering students with financial knowledge and practical skills since 2010</p>
+                    <p class="about-subtitle">Empowering students with financial knowledge and practical skills since 2025</p>
                     <div class="about-image-placeholder">
                          <!-- image here -->
                         <img src="team.jpeg">
